# bqtools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
skills/bqtools/: SKILL.md
src/: main.rs  testutils.rs  types.rs
src/cli/: cat.rs  cli.rs  count.rs  decode.rs  encode.rs  export.rs  formats.rs  grep.rs  import.rs  index.rs  info.rs  input.rs  mod.rs  output.rs  pipe.rs  qc.rs  revcomp.rs  sample.rs  split.rs  verify.rs
src/commands/: index.rs  mod.rs  utils.rs
src/commands/cat/: mod.rs
src/commands/count/: mod.rs
src/commands/decode/: decode_binseq.rs  decode_macros.rs  mod.rs  utils.rs
src/commands/encode/: encode.rs  encode_macros.rs  fasta.rs  fastq.rs  mod.rs  parallel.rs  process.rs  processor.rs  utils.rs
src/commands/encode/encodings/: fasta.rs  fastq.rs  mod.rs
src/commands/encode/parallel/: fasta.rs  fastq.rs  mod.rs  processor.rs
src/commands/encode/processor/: bq.rs  cbq.rs  mod.rs  vbq.rs
src/commands/export/: fasta.rs  fastq.rs
src/commands/grep/: color.rs  fuzzy_pattern_count.rs  fuzzy_proc.rs  mod.rs  patterns.rs  range.rs  regex_pattern_count.rs  regex_proc.rs
src/commands/grep/filter/: ac_matcher.rs  fuzzy_matcher.rs  mod.rs  processor.rs  regex_matcher.rs
src/commands/grep/pattern_count/: ac_pc.rs  fuzzy_pc.rs  mod.rs  processor.rs  regex_pc.rs
src/commands/import/: fasta.rs  fastq.rs
src/commands/info/: mod.rs
src/commands/pipe/: exec.rs  mod.rs  processor.rs  utils.rs
src/commands/qc/: base_content.rs  base_quality.rs  config.rs  dup_levels.rs  gc_content.rs  mod.rs  modules.rs  proc.rs  report.rs  seq_length.rs  seq_quality.rs
src/commands/revcomp/: mod.rs  processor.rs
src/commands/sample/: mod.rs
src/commands/split/: mod.rs
src/commands/split/splitter/: ac_splitter.rs  fuzzy_splitter.rs  mod.rs  processor.rs  regex_splitter.rs
src/commands/verify/: mod.rs  processor.rs
tests/: common.rs  test_decode.rs  test_encode.rs
