[package]
name = "bqtools"
version = "0.4.6"
edition = "2021"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "A command-line tool for interacting with BINSEQ file formats."
repository = "https://github.com/arcinstitute/bqtools"
categories = ["command-line-utilities", "science::bioinformatics", "encoding"]
keywords = ["bioinformatics", "binseq", "vbinseq", "file-format", "sequencing"]

[dependencies]
anyhow = "1.0.100"
binseq = "0.7.5"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
is-terminal = "0.4.16"
itoa = "1.0.15"
gzp = "2.0.0"
libc = "0.2.177"
log = "0.4.28"
memmap2 = "0.9.8"
niffler = "3.0.0"
num_cpus = "1.17.0"
paraseq = { version = "0.4.3", features = ["htslib", "gcs"] }
parking_lot = "0.12.5"
rand = "0.9.2"
regex = "1.12.2"
sassy = "0.1.6"
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
bon = "3.8.1"
itertools = "0.14.0"
nucgen = "0.2.0"
tempfile = "3.23.0"

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
