[package]
name = "bqtools"
version = "0.4.15"
edition = "2021"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "A command-line tool for interacting with BINSEQ file formats."
repository = "https://github.com/arcinstitute/bqtools"
categories = ["command-line-utilities", "science::bioinformatics", "encoding"]
keywords = ["bioinformatics", "binseq", "fastx", "file-format", "sequencing"]

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
binseq = { git = "https://github.com/arcinstitute/binseq.git", branch = "binseq-0.9.0" }
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
env_logger = "0.11.8"
fixedbitset = "0.5.7"
gzp = "2.0.2"
is-terminal = "0.4.17"
libc = "0.2.180"
log = "0.4.29"
memmap2 = "0.9.9"
niffler = "3.0.0"
nix = { version = "0.31.1", features = ["fs"] }
num_cpus = "1.17.0"
paraseq = "0.4.8"
parking_lot = "0.12.5"
rand = "0.9.2"
regex = "1.12.2"
sassy = { version = "0.1.10", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
bon = "3.8.2"
itertools = "0.14.0"
nucgen = "0.2.0"
tempfile = "3.24.0"

[features]
default = ["htslib", "gcs"]
fuzzy = ["sassy"]
htslib = ["paraseq/htslib"]
gcs = ["paraseq/gcs"]

[profile.release]
debug = true
# lto = true
# codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
