[package]
name = "bqtools"
version = "0.5.8"
edition = "2021"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "A command-line tool for interacting with BINSEQ file formats."
repository = "https://github.com/arcinstitute/bqtools"
categories = ["command-line-utilities", "science::bioinformatics", "encoding"]
keywords = ["bioinformatics", "binseq", "fastx", "file-format", "sequencing"]

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
binseq = "0.9.2"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
env_logger = "0.11.10"
fixedbitset = "0.5.7"
gzp = "2.0.2"
is-terminal = "0.4.17"
libc = "0.2.186"
log = "0.4.33"
memmap2 = "0.9.11"
niffler = "3.0.1"
nix = { version = "0.31.3", features = ["fs"] }
num_cpus = "1.17.0"
paraseq = "0.4.13"
parking_lot = "0.12.5"
rand = "0.10.1"
regex = "1.12.4"
sassy = { version = "0.2.4", default-features = false, optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thousands = "0.2.0"
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
bon = "3.9.3"
itertools = "0.15.0"
tempfile = "3.27.0"

[features]
default = ["htslib", "gcs"]
fuzzy = ["sassy"]
htslib = ["paraseq/htslib"]
gcs = ["paraseq/gcs"]

[profile.release]
# debug = true
lto = true
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
